--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -1,7 +1,5 @@
 header.header
-<<<<<<< 59343381b04a14b8035af1318351dc468c15dc80
   .container
-<<<<<<< f022f9303256d5b79d2e2dbcb3126223e46aa337
     .global-nav__container
       = link_to t('256interns'), root_path, class: 'global-nav__title'
       - if logged_in?
@@ -49,20 +47,19 @@ header.header
             = link_to t('sign_up'), new_user_path, class: "global-nav-links__link"
       .global-nav__open-drawer.js-open-drawer-trigger
         i.fa.fa-bars
-=======
-=======
+
   .container.has-no-right-padding
->>>>>>> wip
     .header__container
       = link_to root_path, class: 'header__title' do
         = image_tag('header-logo.svg', alt: "#{t('256interns')}", class: "header__logo")
       - if current_user
         .header-links.is-user-links
           ul.header-links__items
-              li.header-search
-                input.a-xs-text-input.header-search__text-input(type= 'text')
-                button.is-button-standard-sm-secondary.is-icon.header-search__submit
-                  i.fa.fa-search
+              li
+                = form_tag reports_url, method: 'get', class: 'header-search' do
+                  = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input' , placeholder: t('search_report')
+                  button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
+                    i.fa.fa-search
               li.header-links__item
                 = link_to '', class: "header-links__link" do
                   i.fa.fa-bell-o
@@ -74,14 +71,11 @@ header.header
                   i.fa.fa-sign-out
       - else
         .header-links.is-auth-links
-<<<<<<< 9276c304bc838e201cf83356fe96d0684f26eb37
           ul.header-links__items
               li.header-links__item
                 = link_to t('sign_in'), login_path, class: "header-links__link"
               li.header-links__item
                 = link_to t('sign_up'), new_user_path, class: "header-links__link"
->>>>>>> wip
-=======
           = link_to login_path, class: "is-button-standard-md-secondary" do
             = t('sign_in')
           //
@@ -89,4 +83,3 @@ header.header
               = t('sign_up')
       .header-show-mobile-nav.js-show-mobile-nav
         i.fa.fa-bars
->>>>>>> wip
